force-app/main/default/objects/Lead_Engagement__c/Lead_Engagement__c.object-meta.xml
<CustomObject>
    <label>Lead Engagement</label>
    <nameField>
        <displayFormat>ENG-{0000}</displayFormat>
        <label>Engagement ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lead Engagements</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>