force-app/main/default/objects/Lead_Engagement__c/fields/Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Activity_Type__c</fullName>
    <label>Activity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>email</fullName>
            </value>
            <value>
                <fullName>meeting</fullName>
            </value>
            <value>
                <fullName>webinar</fullName>
            </value>
            <value>
                <fullName>other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>