force-app/main/default/objects/Lead_Engagement__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Lead Engagements</relationshipLabel>
    <relationshipName>Lead_Engagements</relationshipName>
    <type>Lookup</type>
</CustomField>